securitygroups.tf
resource "aws_security_group" "allow-ssh" 
{
  
vpc_id      = aws_vpc.myvpc.id
  
name        = "allow-ssh"
  
description = "security group that allows ssh and all egress traffic"
  

ingress 
{
    
from_port   = 22
    
to_port     = 22
    
protocol    = "tcp"
    
cidr_blocks = ["0.0.0.0/0"]
  
} 
  
  

ingress 
{
    
from_port   = 80
    
to_port     = 80
    
protocol    = "tcp"
    
cidr_blocks = ["0.0.0.0/0"]
  
}

  
ingress 
{
    
from_port   = 8080
    
to_port     = 8080
    
protocol    = "tcp"
    
cidr_blocks = ["0.0.0.0/0"]
  
}

  
ingress 
{
    
from_port   = 9092
    
to_port     = 9092
    
protocol    = "tcp"
    
cidr_blocks = ["0.0.0.0/0"]
  
} 

}



egress 
{
    
from_port   = 0
    
to_port     = 0
    
protocol    = "-1"
    
cidr_blocks = ["0.0.0.0/0"]
  
}
